# Colab-traiNNer

./: Colab-traiNNer.ipynb  pyproject.toml  requirements.txt
code/arch/: lvvit_arch.py
code/loss/: batchaug.py
