
[tool.poetry]
name = "colab-trainner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "colab_trainner"}]

[tool.poetry.dependencies]
python = "^3.8"
adamp = "^0.3.0"
albumentations = "^1.3.0"
basicsr = "^1.4.2"
efficientnet-pytorch = "^0.7.1"
kornia = "^0.6.9"
madgrad = "^1.2"
nebulgym = "^0.1.1"
omegaconf = "^2.3.0"
pillow-avif-plugin = "^1.3.1"
swin-transformer-pytorch = "^0.4.1"
tensorboardx = "^2.5.1"
tfrecord = "^1.14.1"
timm = "^0.6.12"
vit-pytorch = "^0.40.2"
wget = "^3.2"
x-transformers = "^1.6.2"
pytorch-lightning = "^1.8.6"
piq = { git = "https://github.com/styler00dollar/piq.git" }
nfnets-pytorch = { git = "https://github.com/vballoli/nfnets-pytorch" }

[[tool.poetry.source]]
name = "colab"
url = "https://us-python.pkg.dev/colab-wheels/public/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
